# router/housesale.go
@@ -21,7 +21,7 @@ func HouseSaleRouters(e *gin.Engine) {
 //@Description 获取全部的售房信息
 //@Success 200 {object} util.Response
 //@Failure 500 {object} util.Response
-//@Router /houserentsale/sale [get]
+//@Router /sale/all [get]
 func sale(c *gin.Context) {
 	data, err := model.SaleAll()
 	if err != nil {
@@ -45,7 +45,7 @@ func sale(c *gin.Context) {
 //@Param id query string true "房屋主键ID"
 //@Success 200 {object} util.Response
 //@Failure 500 {object} util.Response
-//@Router /houserentsale/delete [get]
+//@Router /sale/delete [get]
 func deleteSaleHouseById(c *gin.Context) {
 	id := c.Query("id")
 	err := model.DeleteHouseSale(id)
@@ -68,10 +68,10 @@ func deleteSaleHouseById(c *gin.Context) {
 //@Summary publishHouse
 //@Tags 房屋租售模块
 //@Description 发布房屋租售信息
-//@Param houseRent body model.HouseRentSale true "房屋租售结构体"
+//@Param houseRent body model.HouseSaleRent true "房屋租售结构体"
 //@Success 200 {object} util.Response
 //@Failure 500 {object} util.Response
-//@Router /houserentsale/publish [post]
+//@Router /sale/publish [post]
 func publishSaleHouse(c *gin.Context) {
 	s := model.HouseSaleRent{}
 	if err := c.ShouldBindJSON(&s); err != nil {
@@ -98,13 +98,13 @@ func publishSaleHouse(c *gin.Context) {
 }
 
 //@Summary editHousePrice
-//@Tags 房屋租赁模块
+//@Tags 房屋租售模块
 //@Description 修改房屋价格
 //@Param id query string true "房屋唯一ID"
 //@Param price query string true "新的房屋价格"
 //@Success 200 {object} util.Response
 //@Failure 500 {object} util.Response
-//@Router /houserentsale/editprice [get]
+//@Router /sale/editprice [get]
 func editHouseSalePrice(c *gin.Context) {
 	id := c.Query("id")
 	price := c.Query("price")
